--- a/Unity_final/Assembly-CSharp.csproj
+++ b/Unity_final/Assembly-CSharp.csproj
@@ -71,6 +71,8 @@
      <Compile Include="Assets\Scripts\Player\PointClickMovement.cs" />
      <Compile Include="Assets\Scripts\Player\RelativeMovement.cs" />
      <Compile Include="Assets\Scripts\SceneController.cs" />
+     <Compile Include="Assets\Scripts\UI\InventoryPopup.cs" />
+     <Compile Include="Assets\Scripts\UI\UIController.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>D:/Develop/Unity_learn/Unity_final/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
