--- a/Unity_final/Assembly-CSharp.csproj
+++ b/Unity_final/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
      <Compile Include="Assets\Scripts\Camera\OrbitCamera.cs" />
      <Compile Include="Assets\Scripts\InteractiveElements\CollectibleItem.cs" />
      <Compile Include="Assets\Scripts\Level\MissionManager.cs" />
+     <Compile Include="Assets\Scripts\Level\ObjectiveTrigger.cs" />
      <Compile Include="Assets\Scripts\Level\StartupEvent.cs" />
      <Compile Include="Assets\Scripts\Managers\IGameManager.cs" />
      <Compile Include="Assets\Scripts\Managers\InventoryManager.cs" />
