--- a/Unity_final/Assembly-CSharp.csproj
+++ b/Unity_final/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\Scripts\InteractiveElements\CollectibleItem.cs" />
      <Compile Include="Assets\Scripts\Level\ObjectiveTrigger.cs" />
      <Compile Include="Assets\Scripts\Level\StartupEvent.cs" />
+     <Compile Include="Assets\Scripts\Managers\AudioManager.cs" />
      <Compile Include="Assets\Scripts\Managers\DataManager.cs" />
      <Compile Include="Assets\Scripts\Managers\IGameManager.cs" />
      <Compile Include="Assets\Scripts\Managers\InventoryManager.cs" />
