Added PlayerMover script. Moving player with iTween. Moving hardcoded to Start() method.

--- a/GoBoard/Assembly-CSharp.csproj
+++ b/GoBoard/Assembly-CSharp.csproj
@@ -55,7 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\iTweenExample.cs" />
+     <Compile Include="Assets\Scripts\PlayerMover.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/Develop/Unity_learn/GoBoard/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
