Added PlayerManager, PlayerInput scripts. Moving player depend on user input

--- a/GoBoard/Assembly-CSharp.csproj
+++ b/GoBoard/Assembly-CSharp.csproj
@@ -55,6 +55,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\PlayerInput.cs" />
+     <Compile Include="Assets\Scripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\PlayerMover.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/Develop/Unity_learn/GoBoard/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
