--- a/GoBoard/Assembly-CSharp.csproj
+++ b/GoBoard/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\Scripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\PlayerMover.cs" />
      <Compile Include="Assets\Scripts\ScriptFader.cs" />
+     <Compile Include="Assets\Scripts\Spinner.cs" />
      <Compile Include="Assets\Scripts\Utility.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/Develop/Unity_learn/GoBoard/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
