UI for End screen

--- a/GoBoard/Assembly-CSharp.csproj
+++ b/GoBoard/Assembly-CSharp.csproj
@@ -100,6 +100,9 @@
  <Reference Include="UnityEditor.UI">
  <HintPath>D:/Develop/Unity_learn/GoBoard/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
  </Reference>
+ <Reference Include="Unity.2D.Sprite.Editor">
+ <HintPath>D:/Develop/Unity_learn/GoBoard/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.13f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
  </Reference>
